# ratatoskr

./: CMakeLists.txt  README.md
data/: 90-ratatoskr.rules  org.ratatoskr.conf  ratatoskrd.service  ratatoskrd.service.in
src/: device_manager.cpp  device_manager.hpp  hid_device.cpp  hid_device.hpp  main.cpp
src/drivers/: a50_gen5.cpp  a50_gen5.hpp  driver.hpp
