cmake_minimum_required(VERSION 3.16)
project(ratatoskr VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Dependencies
find_package(PkgConfig REQUIRED)
pkg_check_modules(HIDAPI REQUIRED hidapi-hidraw)
pkg_check_modules(SDBUS REQUIRED sdbus-c++)
pkg_check_modules(UDEV REQUIRED libudev)

# Daemon executable
add_executable(ratatoskrd
    src/main.cpp
    src/device_manager.cpp
    src/hid_device.cpp
    src/drivers/a50_gen5.cpp
)

target_include_directories(ratatoskrd PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${HIDAPI_INCLUDE_DIRS}
    ${SDBUS_INCLUDE_DIRS}
    ${UDEV_INCLUDE_DIRS}
)

target_link_libraries(ratatoskrd PRIVATE
    ${HIDAPI_LIBRARIES}
    ${SDBUS_LIBRARIES}
    ${UDEV_LIBRARIES}
    pthread
)

include(GNUInstallDirs)

# System integration dirs are absolute by default — D-Bus, udev and systemd
# do not search under /usr/local. Override with -D if distro paths differ.
set(SYSTEMD_UNIT_DIR "/usr/lib/systemd/system" CACHE PATH
    "systemd system unit directory")
set(DBUS_SYSTEM_POLICY_DIR "/usr/share/dbus-1/system.d" CACHE PATH
    "D-Bus system bus policy directory")
set(UDEV_RULES_DIR "/usr/lib/udev/rules.d" CACHE PATH
    "udev rules directory")

configure_file(
    ${CMAKE_CURRENT_SOURCE_DIR}/data/ratatoskrd.service.in
    ${CMAKE_CURRENT_BINARY_DIR}/ratatoskrd.service
    @ONLY
)

install(TARGETS ratatoskrd DESTINATION ${CMAKE_INSTALL_BINDIR})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/ratatoskrd.service
        DESTINATION ${SYSTEMD_UNIT_DIR})
install(FILES data/org.ratatoskr.conf
        DESTINATION ${DBUS_SYSTEM_POLICY_DIR})
install(FILES data/90-ratatoskr.rules
        DESTINATION ${UDEV_RULES_DIR})

# Uninstall target -- reads install_manifest.txt generated by `cmake --install`
if(NOT TARGET uninstall)
    configure_file(
        ${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in
        ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake
        @ONLY
    )
    add_custom_target(uninstall
        COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake
    )
endif()
